ASOstl/parsePrefQBF.cpp
/* Generated by re2c 0.13.5 on Fri Feb 20 04:50:44 2015 */
#line 1 "parsePrefQBF.re"
//---------------------------------------------------------------------------
#include "QBFSolver.h"
//---------------------------------------------------------------------------
bool QBFSolver::ParsePref()
{
	FileIO input;
    if (input.Open(inputPref, "rb") == 0)
    {
		return false;
	}
	TSmallStr buff;
	buff.SetLen(input.size());
	if (input.Read(buff(), 1, input.size()) == false)
	{
		return false;
	}
	input.Close();
	if (buff.Len == 0)
	{
		return true;
	}

	numRule = 0;
	char *ptr = buff();
	while (ptr = strstr(ptr, "."))
	{
		numRule++;
		ptr++;
	}
	if (numRule == 0)
	{
		return true;
	}
	numRule = 0;

    const char *cursor      = buff();
    const char *yyMarker    = NULL;
    const char *yyCTXMarker = NULL;

#line 47 "parsePrefQBF.re"




//var		= [A-Z]+;
//arg		= (number|var) space* ("," space* (number|var) space*)*;
//atom1 	= [a-zA-Z\_]+;
//atom2 	= atom1 "(" arg ")";
//atom = (atom1|atom2);

//number 	= "0"|([1-9][0-9]*);
//setSize = "#" space* atom number "," number ".";
//others  = "others";


#line 93 "parsePrefQBF.re"


	if (!ranked)
	{
		pref1.Set("(");
	}
	else
	{
		for (int i=0; i<numLevel; i++)
		{
			//TSmallStr p = prefs1[i].New();
			// prefs1.Append(1);
			// prefs1[i].Set("(");
			// prefs2.Append(1);
			// prefs3.Append(1);
			TSmallStr p;
			prefs1.push_back(p);
			prefs1.back().Set("(");
			prefs2.push_back(p);
			prefs3.push_back(p);
		}
	}
        
	int count = 0;

	for (const char *p=cursor;*p;p=cursor)
	{

#line 88 "parsePrefQBF.cpp"
		{
			char yych;
			unsigned int yyaccept = 0;

			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy2;
			case '%':	goto yy8;
			case '(':	goto yy7;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy4;
			case 'n':	goto yy6;
			default:	goto yy10;
			}
yy2:
			yyaccept = 0;
			yych = *(yyMarker = ++cursor);
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '(':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
			case '|':	goto yy421;
			default:	goto yy3;
			}
yy3:
#line 121 "parsePrefQBF.re"
			{	continue;	}
#line 221 "parsePrefQBF.cpp"
yy4:
			yyaccept = 1;
			yych = *(yyMarker = ++cursor);
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy400;
			case '&':	goto yy327;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy398;
			case '>':	goto yy33;
			case '|':	goto yy402;
			default:	goto yy5;
			}
yy5:
#line 142 "parsePrefQBF.re"
			{	break;	}
#line 300 "parsePrefQBF.cpp"
yy6:
			yyaccept = 1;
			yych = *(yyMarker = ++cursor);
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy400;
			case '&':	goto yy327;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy398;
			case '>':	goto yy33;
			case 'o':	goto yy397;
			case '|':	goto yy402;
			default:	goto yy5;
			}
yy7:
			yyaccept = 1;
			yych = *(yyMarker = ++cursor);
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '(':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
			case '|':	goto yy12;
			default:	goto yy5;
			}
yy8:
			++cursor;
#line 134 "parsePrefQBF.re"
			{
				while (*cursor != '\n' && *cursor != '\0')
				{
					cursor++;
				}
				continue;
			}
#line 449 "parsePrefQBF.cpp"
yy10:
			yych = *++cursor;
			goto yy5;
yy11:
			++cursor;
			yych = *cursor;
yy12:
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy11;
			case '(':	goto yy17;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy14;
			case 'n':	goto yy16;
			default:	goto yy13;
			}
yy13:
			cursor = yyMarker;
			switch (yyaccept) {
			case 0: 	goto yy3;
			case 1: 	goto yy5;
			}
yy14:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy321;
			case '&':	goto yy29;
			case ')':	goto yy325;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy14;
			case '|':	goto yy323;
			default:	goto yy13;
			}
yy16:
			yych = *++cursor;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy14;
			case 'o':	goto yy320;
			default:	goto yy322;
			}
yy17:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy17;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy19;
			case 'n':	goto yy21;
			default:	goto yy13;
			}
yy19:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy23;
			case ')':	goto yy27;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy19;
			case '|':	goto yy25;
			default:	goto yy13;
			}
yy21:
			yych = *++cursor;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy19;
			case 'o':	goto yy22;
			default:	goto yy24;
			}
yy22:
			yych = *++cursor;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy19;
			case 't':	goto yy316;
			default:	goto yy24;
			}
yy23:
			++cursor;
			yych = *cursor;
yy24:
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy23;
			case ')':	goto yy27;
			case '|':	goto yy25;
			default:	goto yy13;
			}
yy25:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy25;
			case ')':	goto yy27;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy304;
			case 'n':	goto yy306;
			default:	goto yy13;
			}
yy27:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy27;
			case '&':	goto yy29;
			case ')':	goto yy31;
			default:	goto yy13;
			}
yy29:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy29;
			case '(':	goto yy255;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy252;
			case 'n':	goto yy254;
			default:	goto yy13;
			}
yy31:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy31;
			case '>':	goto yy33;
			default:	goto yy13;
			}
yy33:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':
			case '|':	goto yy33;
			case '(':	goto yy38;
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy35;
			case 'n':	goto yy37;
			default:	goto yy13;
			}
yy35:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy232;
			case '&':	goto yy161;
			case '.':	goto yy59;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy35;
			case ':':	goto yy61;
			case '>':	goto yy33;
			case '|':	goto yy234;
			default:	goto yy13;
			}
yy37:
			++cursor;
			yych = *cursor;
			switch (yych) {
			case '\n':
			case '\r':
			case ' ':	goto yy232;
			case '&':	goto yy161;
			case '.':	goto yy59;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
